--- a/StationPlus/My Project/Resources.resx
+++ b/StationPlus/My Project/Resources.resx
@@ -124,6 +124,9 @@
   <data name="STATION+ login image" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\STATION+ login image.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="fuel-station" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fuel-station.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="avatar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\avatar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -133,10 +136,19 @@
   <data name="briefing" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\briefing.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="STATION+ logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\STATION+ logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="card" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\card.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="main bg v2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\main bg v2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="STATION+ logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\STATION+ logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="buy" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\buy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SPLUS ICON" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SPLUS ICON.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
