Sales Module Completed/Inquiry Module initiated

--- a/StationPlus/My Project/Resources.resx
+++ b/StationPlus/My Project/Resources.resx
@@ -145,10 +145,13 @@
   <data name="STATION+ logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\STATION+ logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SPLUS ICON" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SPLUS ICON.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="buy" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\buy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="SPLUS ICON" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SPLUS ICON.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="search" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\search.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
